zokrates_cli/examples/compile_errors/assembly/bitwise_op_in_constraint.zok
def main(field mut a, u32 i) {
   asm {
       a <-- a << i; // bitwise operations are allowed in witness generation
       a === a << i; // but not in constraints
   }
}